Pull up following revision(s) (requested by riastradh in ticket #1010):

external/bsd/nvi/dist/regex/engine.c: revision 1.4

Treat a non-existing line like an empty line for matching to avoid segfault.
Fixes PR 57630